aws-vpc/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "6.16.0"
    }
  }
}


provider "aws" {
  region = "ap-south-1"
}
# vpc 
resource "aws_vpc" "my-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "my-vpc"
  }
}


# private subnet 

resource "aws_subnet" "private-subnet" {
  cidr_block = "10.0.1.0/24"
  vpc_id     = aws_vpc.my-vpc.id

  tags = {
    Name = "private-subnet "
  }

}
# public subnet 

resource "aws_subnet" "public-subnet" {
  cidr_block = "10.0.2.0/24"
  vpc_id     = aws_vpc.my-vpc.id

  tags = {
    Name = "public-subnet "
  }
}

# IG 

resource "aws_internet_gateway" "my-ig" {
  vpc_id = aws_vpc.my-vpc.id
  tags = {
    Name = "my-ig"
  }
}


# Route table 
resource "aws_route_table" "public-RT" {
  vpc_id = aws_vpc.my-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my-ig.id
  }
}



resource "aws_route_table_association" "public-sub" {
  subnet_id      = aws_subnet.public-subnet.id
  route_table_id = aws_route_table.public-RT.id
}


# create a ec2 in public subnet 

resource "aws_instance" "myinstance" {
  ami           = "ami-01b6d88af12965bb6"
  instance_type = "t2.micro"

  subnet_id = aws_subnet.public-subnet.id
  
   associate_public_ip_address =  true

  tags = {
    Name = "my-ec2"
  }
}
